--- a/manaswi.html
+++ b/manaswi.html
@@ -68,8 +68,11 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>Hello! I'm a BTech Computer Science and Engineering student with a passion for technology and innovation. I enjoy learning new programming languages and developing projects that solve real-world problems.</p>
+    <p>Hello! I'm UPPADA.MANASWIa BTech Computer Science and Engineering student with a passion for technology and innovation. I enjoy learning new programming languages and developing projects that solve real-world problems.</p>
 </section>
+    <p> age:19,date of birth:30 september 2005,gender:female</p>
+    <p>address:thumadapalem,kancharapalem,vishakapatanm,pincode:53008</p>
+    
 
 <section id="skills">
     <h2>Skills</h2>
@@ -103,7 +106,7 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: myemail@example.com</p>
+    <p>Email:umanaswi3@gmail.com.</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your Profile</a></p>
 </section>
 
