--- a/manaswi.html
+++ b/manaswi.html
@@ -70,8 +70,8 @@
     <h2>About Me</h2>
     <p>Hello! I'm UPPADA.MANASWIa BTech Computer Science and Engineering student with a passion for technology and innovation. I enjoy learning new programming languages and developing projects that solve real-world problems.</p>
 </section>
-    <p> age:19,date of birth:30 september 2005,gender:female</p>
-    <p>address:thumadapalem,kancharapalem,vishakapatanm,pincode:53008</p>
+    <p>      age:19,date of birth:30 september 2005,gender:female</p><BR>
+    <p>      address:thumadapalem,kancharapalem,vishakapatanm,pincode:53008</p>
     
 
 <section id="skills">
